# ppx_deriving_protobuf

./: .gitignore  .merlin  .npmignore  .travis.yml  CHANGELOG.md  LICENSE.txt  Makefile  Protobuf.Decoder.html  Protobuf.Encoder.html  Protobuf.html  README.md  TODO.md  _oasis  _tags  bsconfig.json  descr  dune-project  dune-workspace.dev  html.stamp  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_extensions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  myocamlbuild.ml  opam  package.json  ppx_deriving_protobuf.opam  setup.data  setup.ml  type_Protobuf.Decoder.html  type_Protobuf.Encoder.html  type_Protobuf.html
doc/: api.odocl
lib/: META  ppx_protobuf.ml  protobuf.ml  protobuf.mli  protobuf.mllib
lib_test/: test_codec.ml  test_complex.ml  test_ppx_protobuf.ml  test_primitive.ml  test_protobuf.ml  test_syntax.ml  test_wire.ml
pkg/: META  META.in  build.ml
ppx_deriving_protobuf/: index.html
ppx_deriving_protobuf/Ppx_deriving_protobuf/: index.html
ppx_deriving_protobuf/Ppx_deriving_protobuf/LongidentSet/: index.html
ppx_deriving_protobuf/Protobuf/: index.html
ppx_deriving_protobuf/Protobuf/Decoder/: index.html
ppx_deriving_protobuf/Protobuf/Encoder/: index.html
src/: dune  jbuild  ppx_deriving_protobuf.cppo.ml  ppx_deriving_protobuf.ml  ppx_protobuf.ml  protobuf.ml
src_test/: _tags  dune  jbuild  protoc_inner.ml  protoc_outer.ml  test_ppx_protobuf.ml  test_protoc.ml  test_syntax.ml  test_wire.ml
