opam-version: "2.0"
version: "2.7"
maintainer: "whitequark <whitequark@whitequark.org>"
authors: [ "whitequark <whitequark@whitequark.org>" ]
license: "MIT"
homepage: "https://github.com/ocaml-ppx/ppx_deriving_protobuf"
doc: "https://ocaml-ppx.github.io/ppx_deriving_protobuf"
bug-reports: "https://github.com/ocaml-ppx/ppx_deriving_protobuf/issues"
dev-repo: "git+https://github.com/ocaml-ppx/ppx_deriving_protobuf.git"
tags: [ "syntax" ]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "ocaml"        {>= "4.05"}
  "dune"         {>= "1.0"}
  "cppo"         {build}
  "ppx_deriving" {>= "5.2.1"}
  "ppxlib"       {>= "0.20.0"}
  "ounit2"       {with-test}
  "uint"         {with-test}
]
synopsis: "A Protocol Buffers codec generator for OCaml"
